# Dict

./: CMakeLists.txt
src/: Array.h  def.h  trie.h  words.cpp  words.h
